--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,10 @@
     <string name="confirm_new_password">Confirme sua senha</string>
     <string name="change_password">Alterear senha</string>
     <string name="confirm_info">CONFIRME AS INFORMAÇÕES DE SUA CONTA</string>
+    <string name="invalid_name">Nome Inválido</string>
+    <string name="username_required">Nome de usuário obrigatório</string>
+    <string name="invalid_password">Senha inválida</string>
+    <string name="invalid_email">Email inválido</string>
+    <string name="example_email">exemplo@email.com</string>
+    <string name="invalid_token">Token inválido</string>
 </resources>
